--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,20 @@
 html
     head
         title= title
+
     body
         h1= message
+
+
+        script(src='js/jquery.min.js')
+        script(src='js/underscore-min.js')
+        script(src='js/backbone-min.js')
+
+
+        script.
+            var cats = !{data};
+
+        script(id='catTemplate' type='text/template')
+            <%= name %> is <%= color %> and weighs <%= weight %> kg
+
+        script(src='js/application.js')
