--- a/views/upload.pug
+++ b/views/upload.pug
@@ -3,12 +3,14 @@ html
         title= title
 
     body
-        h1= message
         if user 
             a(href="/logout") Logout
+            form(action="/add" method="POST" enctype="multipart/form-data")
+                input(id="image" name="image" type="file")
+                input(type="submit")
         else
-            a(href="/login") Login
-        a(href="/upload") Upload image
+            a(href="/login") Login to upload
+        
 
 
         script(src='js/jquery.min.js')
