Html layout refactored. Added CSS. Refactored upload handling.

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,23 +1,1 @@
-html
-    head
-        title= title
-
-    body
-        h1= message
-        if user 
-            a(href="/logout") Logout
-        else
-            a(href="/login") Login
-        a(href="/upload") Upload image
-
-
-        script(src='js/jquery.min.js')
-        script(src='js/underscore-min.js')
-        script(src='js/backbone-min.js')
-
-
-
-        script.
-            var imageArray = !{imageArray};
-
-        script(src='js/application.js')
+extends layouts/standard.pug
