--- a/views/register.pug
+++ b/views/register.pug
@@ -1,12 +1,13 @@
-html
-    head
-        title= title
+extends layouts/centered.pug
 
-    body
-        .loginbox
-            form(action="/register" method="POST")
-                input(name="username" type="text" placeholder="username")
-                input(name="email" type="email" placeholder="email adress")
-                input(name="password" type="password" placeholder="password")
-                input(name="passwordrepeat" type="password" placeholder="repeat password")
-                input(type="submit" value="Register")
+block content
+    h1 Register
+    .error= error
+    form(action="/account/register" method="POST")
+        input(name="username" type="text" placeholder="username")
+        input(name="email" type="email" placeholder="email adress")
+        input(name="password" type="password" placeholder="password")
+        input(name="passwordrepeat" type="password" placeholder="repeat password")
+        input(type="submit" value="Register")
+
+            
