--- a/views/layouts/standard.pug
+++ b/views/layouts/standard.pug
@@ -30,5 +30,6 @@ html
             script(src='js/jquery.min.js')
             script(src='js/underscore-min.js')
             script(src='js/backbone-min.js')
+            script(src='js/backbone.paginator.min.js')
 
             script(src='js/application.js')
