--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,11 @@ a:visited {
     text-decoration: none;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 /* /cssreset */
 
 /* colors:
@@ -75,7 +80,7 @@ body {
 
 .wrapper {
     margin: 0 auto;
-    max-width: 900px;
+    max-width: 90%;
 }
 
 .menu {
@@ -118,6 +123,10 @@ body {
     border-radius: 1em;
 }
 
+.footer p {
+    font-size: 0.7rem;
+}
+
 input,
 textarea,
 label {
@@ -140,9 +149,69 @@ label {
     margin: 0 auto 1rem;
 }
 
+.SomethingWentTerriblyWrong {
+    background: #000;
+}
+
+.SomethingWentTerriblyWrong .wrapper,
+.SomethingWentTerriblyWrong .content {
+    width: 560px;
+}
+
+.SomethingWentTerriblyWrong h1 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+.grid:empty {
+    background: url('../layout/spinner.gif') no-repeat center center;
+    margin: 0 auto;
+    height: 20px;
+}
+
 .thumb {
     float: left;
     width: 200px;
     height: 200px;
     margin: 5px;
+    overflow: hidden;
+}
+
+.Image .content {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.Image .tags {
+    flex-basis: 25%;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.Image .tags h1 {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.Image .tags b {
+    font-weight: bold;
+}
+
+.Image .tags a.tag {
+    color: #000;
+    display: block;
+    padding-bottom: 0.1em;
+    margin-left: 1em;
+}
+
+.Image .imageContent {
+    flex-grow: 1;
+    padding: 0 0 0 2em;
+}
+
+.Image .imageContent img{
+    max-width: 100%;
 }
