--- a/views/layouts/standard.pug
+++ b/views/layouts/standard.pug
@@ -2,6 +2,7 @@ html
     head
         title= page.title
         meta(charset='UTF8')
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel='stylesheet' type='text/css' href='/css/style.css')
         block vars
             - var bodyClass = ''
@@ -31,7 +32,7 @@ html
                 block content
             .footer
                 p.right Powered by #[a(href="https://github.com/artifcat/absinthe") Absinthe]
-                .clear
+            .clear
             
         block scripts
             script(src='/js/jquery.min.js')
